--- a/DigiCer-SSL.html
+++ b/DigiCer-SSL.html
@@ -13,12 +13,12 @@
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="./assests/css/style.css" />
-    <link rel="stylesheet" href="./assests/css/responsive.css" />
-    <link rel="stylesheet" href="./assests/css/Cards.css">
-    <link rel="stylesheet" href="./assests/style.css">
-    <link rel="stylesheet" href="./assests/css/navbar.css">
-    <link rel="stylesheet" href="./assests/scss/main.css">
+    <link rel="stylesheet" href="./DigicertSSL-assests/css/style.css" />
+    <link rel="stylesheet" href="./DigicertSSL-assests/css/responsive.css" />
+    <link rel="stylesheet" href="./DigicertSSL-assests/css/Cards.css">
+    <link rel="stylesheet" href="./DigicertSSL-assests/style.css">
+    <link rel="stylesheet" href="./DigicertSSL-assests/css/navbar.css">
+    <link rel="stylesheet" href="./DigicertSSL-assests/scss/main.css">
     <!-- typeed js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.10/typed.min.js"></script>
     <meta name="keywords" content=" linux hosting with cpanel , Best Linux CPanel Shared Hosting  ,CPanel Shared Hosting">
@@ -36,7 +36,7 @@
             <div class="pre-main">
                 <div class="logo">
                     <a class="navbar-brand" href="https://domgys.in/">
-                        <img src="./assests/img/logo.png" alt="Logo" class="img-fluid logo-cls" width="160" height="30">
+                        <img src="./DigicertSSL-assests/img/logo.png" alt="Logo" class="img-fluid logo-cls" width="160" height="30">
                     </a>
                 </div>
                 <div class="head_paragraph">
@@ -208,7 +208,7 @@
 
                 <div class="col-md-6 col-lg-6 col-sm-12 g-4 ">
                     <div class="second_image">
-                        <img src="./assests/img/share-hosting/1.png" alt=" Linux CPanel Shared Hosting">
+                        <img src="./DigicertSSL-assests/img/share-hosting/1.png" alt=" Linux CPanel Shared Hosting">
                     </div>
                 </div>
             </div>
@@ -229,7 +229,7 @@
             <div class="row">
                 <div class="col-lg-5 col-12 row_center g-4">
                     <div class="section_section_img">
-                        <img src="./assests/img/share-hosting/1.jpg" alt=" Linux CPanel Shared Hosting">
+                        <img src="./DigicertSSL-assests/img/share-hosting/1.jpg" alt=" Linux CPanel Shared Hosting">
                     </div>
                 </div>
                 <div class="col-lg-7  col-12 g-4">
@@ -692,7 +692,7 @@ Manage Your Website Seamlessly with CPanel Shared Hosting - Because Reliable Hos
                 <div class="col-md-3 col-12">
                     <div class="bg-logo">
                         <a class="navbar-brand " href="https://domgys.in/index.html">
-                            <img src="./assests/img/logo.png" alt="Domgys" class="img-fluid" width="160" height="30">
+                            <img src="./DigicertSSL-assests/img/logo.png" alt="Domgys" class="img-fluid" width="160" height="30">
                         </a>
                     </div>
                     <div class="py-2 pt-3 text-white footertext">
@@ -798,7 +798,7 @@ Manage Your Website Seamlessly with CPanel Shared Hosting - Because Reliable Hos
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="./assests/js/app.js"></script>
+    <script src="./DigicertSSL-assests/js/app.js"></script>
 </body>
 
 </html>
