--- a/DigiCer-SSL.html
+++ b/DigiCer-SSL.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="canonical" href="https://domgys.in/shared-hosting.html">
 
-    <title>Buy Best Linux CPanel Shared Hosting In India - Domgys</title>
+    <title>Buy Best DigiCert SSL Certificates - Domgys</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
@@ -199,7 +199,7 @@
             <div class="row row-design_gap  ">
                 <div class="col-md-6 col-lg-6 col-sm-12 g-4 ">
                     <div class="first_section">
-                        <h2>Linux CPanel Shared Hosting </h2>
+                        <h2>Buy Best DigiCert SSL Certificates - Domgys</h2>
                         <!-- <p>Buy Best Linux CPanel Shared Hosting In India - Domgys</p> -->
                         <br><br>
                         <a class="btn btn-design" href="#Product_show">Explore more </a>
