--- a/DigiCer-SSL.html
+++ b/DigiCer-SSL.html
@@ -238,9 +238,9 @@
 
     <div class="container-fluid background_random">
         <div class="container">
-            <div class="row row-design_gap  ">
+            <div class="row row-design_gap d-flex  ">
                 <div class="col-md-7 col-lg-6 col-sm-12  ">
-                    <div class="first_section">
+                    <div class="first_section ">
                       
                         <h2> Buy Best<span> DigiCert SSL Certificates </span>- Domgys</h2>
                         <!-- <p>Buy Best Linux CPanel Shared Hosting In India - Domgys</p> -->
@@ -250,8 +250,8 @@
                 </div>
 
                 <div class="col-md-5 col-lg-6 col-sm-12 ">
-                    <div class="second_image">
-                        <img src="./assests_digicertSSL/img/window-vps-hosting/6.png" alt="Dedicated Server Hosting . ">
+                    <div class="second_image ">
+                        <img src="./assests_digicertSSL/img/window-vps-hosting/6.svg" alt="Dedicated Server Hosting . ">
                     </div>
                 </div>
             </div>
@@ -270,12 +270,12 @@
                  <h1>Best Windows VPS Hosting in India -Domgys</h1>
             </div> -->
             <div class="row">
-                <div class="col-lg-5 col-12 row_center g-4 ">
+                <div class="col-lg-5 col-12 row_center  ">
                     <div class="section_section_img" data-aos="fade-up">
                         <img src="./assests_digicertSSL/img/window-vps-hosting/7.jpg" alt="Dedicated Server Hosting">
                     </div>
                 </div>
-                <div class="col-lg-7  col-12 g-4">
+                <div class="col-lg-7  col-12 ">
                     <div class="first_section_para " data-aos="fade-up">
                         <div class="row main_heading-1">
                             <br>
