--- a/DigiCer-SSL.html
+++ b/DigiCer-SSL.html
@@ -685,7 +685,7 @@
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="service-item item-cyan position-relative">
-              <i class="bi bi-activity icon"></i>
+              <i class="bi bi-shield-check icon"></i>
               <h3>Strong Encryption</h3>
               <p>DigiCert SSL certificates offer strong encryption standards, typically 256-bit encryption, ensuring that data
                  transmitted between a user’s browser and a web server remains confidential and secure from interception and 
@@ -708,7 +708,7 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
             <div class="service-item item-teal position-relative">
               <!-- <i class="bi bi-easel icon"></i> -->
-              <i class="bi bi-database-fill-lock icon"></i>
+              <i class="bi bi-tools icon"></i>
               <h3>Management Tools</h3>
               <p>DigiCert offers comprehensive certificate management tools, including the DigiCert CertCentral platform, which simplifies the process of purchasing, issuing, renewing, and managing SSL certificates.
             </p>
@@ -718,7 +718,7 @@
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="400">
             <div class="service-item item-red position-relative">
-              <i class="bi bi-bounding-box-circles icon"></i>
+              <i class="bi bi-check icon"></i>
               <h3>24/7 Customer Support</h3>
               <p> DigiCert provides round-the-clock customer support to assist with any issues or queries related to SSL certificate installation, management, or troubleshooting, ensuring a smooth and secure experience for users.
             </p>
@@ -728,7 +728,7 @@
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="500">
             <div class="service-item item-indigo position-relative">
-              <i class="bi bi-calendar4-week icon"></i>
+              <i class="bi bi-bookmark-check-fill icon"></i>
               <h3>Warranty and Liability Protection</h3>
               <p>DigiCert SSL certificates come with a substantial warranty, providing financial protection in case of a data breach due to a certificate flaw. This warranty can range from $500,000 to $2 million, depending on the certificate type.
             </p>
@@ -738,7 +738,7 @@
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="600">
             <div class="service-item item-pink position-relative">
-              <i class="bi bi-arrow-repeat icon"></i>
+              <i class="bi bi-bar-chart-line-fill icon"></i>
               <h3>Rapid Issuance</h3>
               <p>DigiCert is known for its quick and efficient issuance process. Many certificates, especially DV and OV types, can be issued within minutes to a few hours, allowing businesses to secure their websites promptly.
             </p>
