--- a/DigiCer-SSL.html
+++ b/DigiCer-SSL.html
@@ -269,20 +269,20 @@
             <!-- <div class="row main_heading-1">
                  <h1>Best Windows VPS Hosting in India -Domgys</h1>
             </div> -->
-            <div class="row">
+            <div class="row" data-aos="fade-up">
                 <div class="col-lg-5 col-12 row_center  ">
-                    <div class="section_section_img" data-aos="fade-up">
+                    <div class="section_section_img" >
                         <img src="./assests_digicertSSL/img/window-vps-hosting/7.jpg" alt="Dedicated Server Hosting">
                     </div>
                 </div>
                 <div class="col-lg-7  col-12 ">
-                    <div class="first_section_para " data-aos="fade-up">
-                        <div class="row main_heading-1">
+                    <div class="first_section_para " >
+                        <div class="row main_heading-1" >
                             <br>
                             <h1>Buy Best DigiCert SSL Certificates - Domgys</h1>
                         </div>
                         <!-- <br> -->
-                        <p>Secure your online presence with DigiCert SSL Certificates. As a trusted leader in digital security,
+                        <p >Secure your online presence with DigiCert SSL Certificates. As a trusted leader in digital security,
                              DigiCert offers robust encryption solutions to safeguard your website's data. Whether you're running 
                              an e-commerce platform, corporate site, or personal blog, our SSL certificates provide peace of mind 
                              for you and your visitors. With DigiCert, you get industry-leading encryption technology, ensuring that
