--- a/DigiCer-SSL.html
+++ b/DigiCer-SSL.html
@@ -269,7 +269,7 @@
             <!-- <div class="row main_heading-1">
                  <h1>Best Windows VPS Hosting in India -Domgys</h1>
             </div> -->
-            <div class="row" data-aos="fade-up">
+            <div class="row g-4" data-aos="fade-up">
                 <div class="col-lg-5 col-12 row_center  ">
                     <div class="section_section_img" >
                         <img src="./assests_digicertSSL/img/window-vps-hosting/7.jpg" alt="Dedicated Server Hosting">
@@ -675,7 +675,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Popular Features of </h2>
-        <p>Digi Cert SSL Certificate<br></p>
+        <p class="text-center">Digi Cert SSL Certificate<br></p>
       </div>
       <!-- End Section Title -->
 
@@ -755,19 +755,19 @@
     <!-- 7 days offer -->
     <div class="container-fluid offer_section_bg">
         <div class="container">
-            <div class="row py-5" data-aos="fade-right" data-aos-offset="200" data-aos-delay="50">
-                <div class="offset-md-1 col-lg-10 offset-md-1">
+            <div class="row py-5 " data-aos="fade-right" data-aos-offset="200" data-aos-delay="50">
+                <div class=" col-lg-10 m-auto">
                     <div class="main_box-1">
                         <h2>7-Days Money-Back Guarantee</h2>
-                        <p>If you are not 100% satisfied, you can request a refund of your payment within 7 days after
+                        <p class="p-2">If you are not 100% satisfied, you can request a refund of your payment within 7 days after
                             your
                             purchase. The process is seamless and risk-free. For more information, please check our
                             <a href="https://domgys.in/terms.html"> Refund Policy</a>
                             (exceptions may apply).
                         </p>
                         <!-- <div class="main_button">
-              <a href="#Product_show"> Start now </a>
-            </div> -->
+                <a href="#Product_show"> Start now </a>
+                </div> -->
                         <div class="main_button_two">
                             <a href="https://domgys.in/"> Learn More </a>
                         </div>
@@ -791,7 +791,7 @@
     <!-- faq section -->
     <div class="container py-3">
         <div class="row p-2" data-aos="fade-left" data-aos-offset="200" data-aos-delay="50">
-            <div class="offset-sm-1 offset-lg-1 col-lg-10 col-sm-10 offset-lg-1 offset-sm-1 price_end">
+            <div class="offset-sm-1 p-3 offset-lg-1 col-lg-10 col-sm-10 offset-lg-1 offset-sm-1 price_end">
                 <div>
                     <h4>DigiCert SSL Certificate FAQs</h4>
                     <!-- <p>
