--- a/DigiCer-SSL.html
+++ b/DigiCer-SSL.html
@@ -322,8 +322,8 @@
             </div>
     
 
-            <div class="row py-2  " data-aos="fade-up" data-aos-offset="200" data-aos-delay="50">
-                <div class=" col-lg-4 col-md-6 col-12 g-4">
+            <div class="row py-2 g-4 " data-aos="fade-up" data-aos-offset="200" data-aos-delay="50">
+                <div class=" col-lg-4 col-md-6 col-12 ">
                     <div class="price_box">
                         <div class="item_center">
                            <h2> EV SSL Plus </h2>
@@ -362,7 +362,7 @@
                     <!-- first completed  -->
                   </div>
 
-                    <div class="col-lg-4 col-md-6 g-4 col-12">
+                    <div class="col-lg-4 col-md-6 col-12">
                         <!-- <div class="top_recomnd">Recomanded</div> -->
                         <div class="price_box price_box-mid">
                             <!-- <div class="top_recomnd">Recomanded</div> -->
@@ -404,7 +404,7 @@
 
        
 
-            <div class="col-lg-4 col-md-6 g-4 col-12 ">
+            <div class="col-lg-4 col-md-6 col-12 ">
                 <div class="price_box">
                     <div class="item_center">
                         <h2>SSL Plus</h2>
@@ -778,15 +778,6 @@
     </div>
 
     <!-- 30 days offer end -->
-
-
-
-
-
-
-
-
-
 
     <!-- faq section -->
     <div class="container py-3">
