--- a/DigiCer-SSL.html
+++ b/DigiCer-SSL.html
@@ -18,9 +18,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
    
     <link rel="stylesheet" href="./assests_digicertSSL/css/style.css" />
-    <link rel="stylesheet" href="./assests_digicertSSL/css/responsive.css" />
+    <!-- <link rel="stylesheet" href="./assests_digicertSSL/css/responsive.css" /> -->
     <link rel="stylesheet" href="./assests_digicertSSL/css/Cards.css">
-    <!-- <link rel="stylesheet" href="./assests_digicertSSL/style.css"> -->
+    <link rel="stylesheet" href="./assests_digicertSSL/style.css">
     <link rel="stylesheet" href="./assests_digicertSSL/css/header.css">
     <link rel="stylesheet" href="./assests_digicertSSL/scss/main.css">
 
@@ -478,7 +478,7 @@
               </div>
             </div>
           </div> -->
-<br>
+<!-- <br> -->
 
  
 
