--- a/DigiCer-SSL.html
+++ b/DigiCer-SSL.html
@@ -333,7 +333,7 @@
                             </div>
                             <div class="item_center">
                                 <p class="price_tag">
-                                    &#x20b9; <span>₹24,206 </span> /year
+                                    &#x20b9; <span>24,206 </span> /year
                                 </p>
                                 <!-- <p class="description">
                                 anything you want
@@ -375,7 +375,7 @@
                                 </div>
                                 <div class="item_center">
                                     <p class="price_tag">
-                                        &#x20b9; <span>₹52,858</span> /year
+                                        &#x20b9; <span>52,858</span> /year
                                     </p>
                                     <!-- <p class="description">
                                     anything you want
@@ -414,7 +414,7 @@
                         </div>
                         <div class="item_center">
                             <p class="price_tag">
-                                &#x20b9; <span>₹14,326</span> /year
+                                &#x20b9; <span>14,326</span> /year
                             </p>
                             <!-- <p class="description">
                 anything you want
@@ -791,7 +791,7 @@
                 </div>
 
                 <!-- accordian main  -->
-                <div class="accordian_main">
+                <div class="accordian_main pt-5">
                     <div class="accordion" id="accordionExample">
                         <div class="accordion-item">
                             <h2 class="accordion-header">
@@ -961,6 +961,54 @@
   <i class="bi bi-whatsapp my-float"></i>
   </a>
 </div>
+
+<div class="row main_logo">
+      <div class=" section-title section_cumtomer py-md-5" >
+        <p class="text-center">Our Customers<br></p>
+        <hr class="hr_section">
+      </div>
+        <div class="logos">
+            <div class="logo-slide">
+                <span><img src="./assests_digicertSSL/img/slider/1.jpeg" alt=""></span>
+                <span><img src="./assests_digicertSSL/img/slider/3.jpeg" alt=""></span>
+                <span><img src="./assests_digicertSSL/img/slider/4.jpeg" alt=""></span>                
+                <span><img src="./assests_digicertSSL/img/slider/6.jpeg" alt=""></span>
+                <span><img src="./assests_digicertSSL/img/slider/7.jpeg" alt=""></span>
+                <span><img src="./assests_digicertSSL/img/slider/8.jpeg" alt=""></span>
+                <span><img src="./assests_digicertSSL/img/slider/9.jpeg" alt=""></span>
+                <span><img src="./assests_digicertSSL/img/slider/10.jpeg" alt=""></span>               
+                <span><img src="./assests_digicertSSL/img/slider/12.jpeg" alt=""></span>
+                <span><img src="./assests_digicertSSL/img/slider/13.jpeg" alt=""></span>
+                <span><img src="./assests_digicertSSL/img/slider/14.jpeg" alt=""></span>
+                <span><img src="./assests_digicertSSL/img/slider/15.jpeg" alt=""></span>
+                <span><img src="./assests_digicertSSL/img/slider/18.jpeg" alt=""></span>
+                <span><img src="./assests_digicertSSL/img/slider/19.jpeg" alt=""></span>                
+                <span><img src="./assests_digicertSSL/img/slider/20.jpeg" alt=""></span>                
+                <span><img src="./assests_digicertSSL/img/slider/21.jpeg" alt=""></span>                
+                <span><img src="./assests_digicertSSL/img/slider/22.jpeg" alt=""></span>                
+                          
+            </div>
+            <div class="logo-slide">
+                <span><img src="./assests_digicertSSL/img/slider/1.jpeg" alt=""></span>
+                <span><img src="./assests_digicertSSL/img/slider/3.jpeg" alt=""></span>
+                <span><img src="./assests_digicertSSL/img/slider/4.jpeg" alt=""></span>                
+                <span><img src="./assests_digicertSSL/img/slider/6.jpeg" alt=""></span>
+                <span><img src="./assests_digicertSSL/img/slider/7.jpeg" alt=""></span>
+                <span><img src="./assests_digicertSSL/img/slider/8.jpeg" alt=""></span>
+                <span><img src="./assests_digicertSSL/img/slider/9.jpeg" alt=""></span>
+                <span><img src="./assests_digicertSSL/img/slider/10.jpeg" alt=""></span>               
+                <span><img src="./assests_digicertSSL/img/slider/12.jpeg" alt=""></span>
+                <span><img src="./assests_digicertSSL/img/slider/13.jpeg" alt=""></span>
+                <span><img src="./assests_digicertSSL/img/slider/14.jpeg" alt=""></span>
+                <span><img src="./assests_digicertSSL/img/slider/15.jpeg" alt=""></span>
+                <span><img src="./assests_digicertSSL/img/slider/18.jpeg" alt=""></span>
+                <span><img src="./assests_digicertSSL/img/slider/19.jpeg" alt=""></span>                
+                <span><img src="./assests_digicertSSL/img/slider/20.jpeg" alt=""></span>                
+                <span><img src="./assests_digicertSSL/img/slider/21.jpeg" alt=""></span>                
+                <span><img src="./assests_digicertSSL/img/slider/22.jpeg" alt=""></span>  
+            </div>
+        </div>
+    </div>
 
 <!-- footer start -->
     <footer class="container-fluid " id="footer_link_size">
