--- a/DigiCer-SSL.html
+++ b/DigiCer-SSL.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="canonical" href="https://domgys.in/window-vps-hosting.html">
+    <link rel="canonical" href="https://domgys.in/DigiCer-SSL.html.html">
 
     <title>Buy Best DigiCert SSL Certificates - Domgys</title>
 
@@ -756,7 +756,7 @@
     <div class="container-fluid offer_section_bg">
         <div class="container">
             <div class="row py-5 " data-aos="fade-right" data-aos-offset="200" data-aos-delay="50">
-                <div class=" col-lg-10 m-auto">
+                <div class=" col-lg-10 col-md-10 m-auto">
                     <div class="main_box-1">
                         <h2>7-Days Money-Back Guarantee</h2>
                         <p class="p-2">If you are not 100% satisfied, you can request a refund of your payment within 7 days after
@@ -1136,6 +1136,8 @@
                 offset: 150,
                 duration: 700,
             });
+            AOS.init({  disable: 'phone'})
+            AOS.init({  disable: 'tablet'})
         });
 
     </script>
